Fix spacing

--- a/src/scss/components/_c-table.scss
+++ b/src/scss/components/_c-table.scss
@@ -3,7 +3,7 @@
   overflow-x: auto;
 
   &:not(:last-child) {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
   }
 }
 
@@ -16,7 +16,7 @@
     font-size: 30px;
     font-weight: 600;
     text-align: left;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 
   th {
