--- a/src/scss/utilities/_margin.scss
+++ b/src/scss/utilities/_margin.scss
@@ -2,7 +2,7 @@
   margin-bottom: 20px;
 }
 
-.u-middle-el {
+.u-mt-20 {
   margin: 20px 0;
 }
 
